more items and blocks added

--- a/src/main/resources/assets/enerjolt/lang/en_us.json
+++ b/src/main/resources/assets/enerjolt/lang/en_us.json
@@ -866,7 +866,7 @@
   "tooltip.enerjolt.upgrade_view.button.open": "Open Upgrade View",
   "tooltip.enerjolt.upgrade_view.button.close": "Close Upgrade View",
 
-  "itemGroup.enerjolt.tab": "Energized Power",
+  "itemGroup.enerjolt.tab": "Enerjolt",
 
   "entity.minecraft.villager.enerjolt.electrician": "Electrician",
 
