--- a/src/main/resources/assets/enerjolt/lang/en_us.json
+++ b/src/main/resources/assets/enerjolt/lang/en_us.json
@@ -1876,5 +1876,9 @@
   "book.enerjolt.page.factory.1": "The factory building contains some machines and something interesting in the center of the building. It can be found in Forest and Flower Forest biomes.",
 
   "book.enerjolt.page.small_solar_farm.title": "Small Solar Farm",
-  "book.enerjolt.page.small_solar_farm.1": "The small solar farm is a structure with some Solar Panels producing energy. It can be found in Desert, Badlands, and Savanna biomes."
+  "book.enerjolt.page.small_solar_farm.1": "The small solar farm is a structure with some Solar Panels producing energy. It can be found in Desert, Badlands, and Savanna biomes.",
+
+
+  "item.enerjolt.evil_iron_zombie": "Evil Iron Zombie",
+  "entity.mccourse.evil_iron_zombie": "Evil Iron Zombie"
 }
