sorting out some missing files

--- a/src/main/resources/assets/enerjolt/lang/en_us.json
+++ b/src/main/resources/assets/enerjolt/lang/en_us.json
@@ -1880,5 +1880,6 @@
 
 
   "item.enerjolt.evil_iron_zombie": "Evil Iron Zombie",
+  "item.enerjolt.evil_iron_zombie_spawn_egg": "Evil Iron Zombie Spawn Egg",
   "entity.mccourse.evil_iron_zombie": "Evil Iron Zombie"
 }
